--- a/index.html
+++ b/index.html
@@ -19,30 +19,43 @@
 
             document.getElementById("semicircle-1").style.display = "none";
             document.getElementById("semicircle-2").style.display = "flex";
-
             document.getElementById("bar-1").style.display = "none";
             document.getElementById("bar-2").style.display = "flex";
             document.getElementById("mobile-box").style.backgroundColor = "#383838";
             document.body.style.backgroundColor = "#383838";
+            document.getElementById("ch").style.color = "#FFFFFF";
+            document.getElementById("custom").style.color = "#EEEEEE";
+            document.getElementById("p-skip").style.color = "#D3D3D3";
+
+            document.getElementById("arrow-div").style.backgroundColor = "#4D4D4D";
+            document.getElementById("imgarrow").style.display = "none";
+            document.getElementById("imgarrow-2").style.display = "flex";
+
+
+
         }
 
         function day() {
 
             document.getElementById("semicircle-1").style.display = "flex";
             document.getElementById("semicircle-2").style.display = "none";
-
             document.getElementById("bar-1").style.display = "flex";
             document.getElementById("bar-2").style.display = "none";
             document.getElementById("mobile-box").style.backgroundColor = "#FFFFFF";
             document.body.style.backgroundColor = "#FFFFFF";
-        }
+            document.getElementById("ch").style.color = "black";
+            document.getElementById("custom").style.color = "#414141";
+            document.getElementById("p-skip").style.color = "black";
 
+            document.getElementById("arrow-div").style.backgroundColor = "#FFFFFF";
+            document.getElementById("imgarrow").style.display = "flex";
+            document.getElementById("imgarrow-2").style.display = "none";
+        }
 
     </script>
 </head>
 
 <body>
-
 
     <div class="semicircles img-1  d-flex position-relative justify-content-center">
         <div class="semicircle-1-div justify-content-center" id="semicircle-1">
@@ -63,35 +76,45 @@
                     <div class="status-bar-2  justify-content-center" id="bar-2" style="margin-top: 17px;">
                         <img src="./images/header-white.png">
                     </div>
+
+
+
                     <div class="circle1-div d-flex justify-content-center" id="circle-2" style="margin-top: 68px;">
-                        <img src="./images/circle1.png">
+                        <img src="./images/circle1.png " style="display: none;">
+                        <div class="moon-div">
+
+                        </div>
+
+                        <img src="./images/circle-sm-2.png" alt="2" id="smlellipse2" style="display: none;">
                     </div>
-                    <div class="choos d-flex justify-content-center" style="margin-top: 109px;">
-                        <p>Choose a Style</p>
+
+
+
+
+                    <div class="choos justify-content-center" id="choosStyle" style="margin-top: 109px;">
+                        <p id="ch">Choose a Style</p>
                     </div>
                     <div class="Customize d-flex justify-content-center">
-                        <p>Customize your interface <br>
+                        <p id="custom">Customize your interface <br>
                             Day or Night</p>
                     </div>
                     <div class="rect-1-div d-flex justify-content-center" style="position: relative; margin-top: 76px;">
                         <div class="rectang-div">
-
                             <button class="rectangle2" onclick="night()" type="button" id="btn-2">Dark</button>
                             <button class="rectangle1" onclick="day()" type="button" id="btn-1">Light</button>
-
                         </div>
                     </div>
                     <div class="footer1 d-flex flex-row justify-content-center" style="padding-top: 223px; gap: 253px;">
                         <a href="#" style="text-decoration: none;">
                             <p id="p-skip" class="skip">Skip</p>
                         </a>
-                        <div class="circle-sm-div  d-flex justify-content-center align-items-center">
-                            <img src="./images/arrow.png" style="width: 14px; height: 16px;">
+                        <div class="circle-sm-div  d-flex justify-content-center align-items-center" id="arrow-div">
+                            <img src="./images/arrow.png" style="width: 14px; height: 16px;" id="imgarrow">
+                            <img src="./images/arrow-2.png" style="width: 14px; height: 16px;" id="imgarrow-2">
                         </div>
                     </div>
-                    <div class="line-div d-flex justify-content-center" style="padding-bottom: 64px;">
+                    <div class="line-div d-flex justify-content-center" style="padding-bottom: 64px;" id="">
                         <img src="./images/line.png">
-
                     </div>
 
 </body>
