--- a/index.html
+++ b/index.html
@@ -12,46 +12,59 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-
     <script type="text/javascript">
-
         function night() {
-
             document.getElementById("semicircle-1").style.display = "none";
             document.getElementById("semicircle-2").style.display = "flex";
             document.getElementById("bar-1").style.display = "none";
             document.getElementById("bar-2").style.display = "flex";
             document.getElementById("mobile-box").style.backgroundColor = "#383838";
+            document.getElementById("foot").style.marginTop = "48px";
             document.body.style.backgroundColor = "#383838";
             document.getElementById("ch").style.color = "#FFFFFF";
             document.getElementById("custom").style.color = "#EEEEEE";
             document.getElementById("p-skip").style.color = "#D3D3D3";
-
             document.getElementById("arrow-div").style.backgroundColor = "#4D4D4D";
             document.getElementById("imgarrow").style.display = "none";
             document.getElementById("imgarrow-2").style.display = "flex";
-
-
-
+            document.getElementById("circle-1").style.display = "none";
+            document.getElementById("circle-2").style.display = "flex";
+            document.getElementById("btn-1").style.width = "244px";
+            document.getElementById("btn-2").style.width = "133px";
+            document.getElementById("btn-1").style.position = "inherite";
+            document.getElementById("btn-2").style.position = "absolute";
+            document.getElementById("btn-1").style.zIndex = "1";
+            document.getElementById("btn-2").style.zIndex = "2";
+            document.getElementById("btn-1").style.left = "80px";
+            document.getElementById("btn-2").style.left = "190px";
+            document.getElementById("btn-1").style.paddingRight = "110px";
+            document.getElementById("btn-2").style.paddingLeft = "0px";
         }
 
         function day() {
-
             document.getElementById("semicircle-1").style.display = "flex";
             document.getElementById("semicircle-2").style.display = "none";
             document.getElementById("bar-1").style.display = "flex";
             document.getElementById("bar-2").style.display = "none";
             document.getElementById("mobile-box").style.backgroundColor = "#FFFFFF";
+            document.getElementById("foot").style.marginTop = "6px";
             document.body.style.backgroundColor = "#FFFFFF";
             document.getElementById("ch").style.color = "black";
             document.getElementById("custom").style.color = "#414141";
             document.getElementById("p-skip").style.color = "black";
-
             document.getElementById("arrow-div").style.backgroundColor = "#FFFFFF";
             document.getElementById("imgarrow").style.display = "flex";
             document.getElementById("imgarrow-2").style.display = "none";
+            document.getElementById("circle-1").style.display = "flex";
+            document.getElementById("circle-2").style.display = "none";
+            document.getElementById("btn-1").style.width = "133px";
+            document.getElementById("btn-2").style.width = "244px";
+            document.getElementById("btn-1").style.position = "absolute";
+            document.getElementById("btn-2").style.position = "inherit";
+            document.getElementById("btn-1").style.paddingleft = "120px";
+            document.getElementById("btn-2").style.paddingLeft = "140px";
+            document.getElementById("btn-1").style.paddingRight = "10px";
         }
-
     </script>
 </head>
 
@@ -65,8 +78,7 @@
             <img src="./images/Ellipse-dark.png">
         </div>
     </div>
-
-    <div class="container d-flex justify-content-center ">
+    <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-md-6 col-12 d-flex justify-content-center">
                 <div class="box" id="mobile-box" style="top: 64px; bottom: 64px;">
@@ -76,21 +88,16 @@
                     <div class="status-bar-2  justify-content-center" id="bar-2" style="margin-top: 17px;">
                         <img src="./images/header-white.png">
                     </div>
-
-
-
-                    <div class="circle1-div d-flex justify-content-center" id="circle-2" style="margin-top: 68px;">
-                        <img src="./images/circle1.png " style="display: none;">
-                        <div class="moon-div">
-
+                    <div class="circle1-div justify-content-center" id="circle-1" style="margin-top: 68px;">
+                        <div class="circle-1-div">
                         </div>
-
-                        <img src="./images/circle-sm-2.png" alt="2" id="smlellipse2" style="display: none;">
                     </div>
-
-
-
-
+                    <div class="circle2-div  justify-content-center" id="circle-2" style="margin-top: 68px;">
+                        <div class="moon position-relative">
+                        </div>
+                        <div class="moon-div position absolute">
+                        </div>
+                    </div>
                     <div class="choos justify-content-center" id="choosStyle" style="margin-top: 109px;">
                         <p id="ch">Choose a Style</p>
                     </div>
@@ -99,12 +106,13 @@
                             Day or Night</p>
                     </div>
                     <div class="rect-1-div d-flex justify-content-center" style="position: relative; margin-top: 76px;">
-                        <div class="rectang-div">
+                        <div class="rectang-div ">
                             <button class="rectangle2" onclick="night()" type="button" id="btn-2">Dark</button>
                             <button class="rectangle1" onclick="day()" type="button" id="btn-1">Light</button>
                         </div>
                     </div>
-                    <div class="footer1 d-flex flex-row justify-content-center" style="padding-top: 223px; gap: 253px;">
+                    <div class="footer1 d-flex flex-row justify-content-center" id="foot"
+                        style="padding-top: 223px; gap: 253px;">
                         <a href="#" style="text-decoration: none;">
                             <p id="p-skip" class="skip">Skip</p>
                         </a>
@@ -116,6 +124,10 @@
                     <div class="line-div d-flex justify-content-center" style="padding-bottom: 64px;" id="">
                         <img src="./images/line.png">
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
