--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script type="text/javascript">
+
         function night() {
             document.getElementById("semicircle-1").style.display = "none";
             document.getElementById("semicircle-2").style.display = "flex";
-            document.getElementById("bar-1").style.display = "none";
-            document.getElementById("bar-2").style.display = "flex";
+
             document.getElementById("mobile-box").style.backgroundColor = "#383838";
-            document.getElementById("foot").style.marginTop = "48px";
+            document.getElementById("foot").style.marginTop = "38px";
+            document.getElementById("GS").style.color = "#fff";
+
+            document.getElementById("svg-1").style.fill = "#fff";
+            document.getElementById("svg-2").style.fill = "#fff";
+            document.getElementById("svg-3").style.fill = "#fff";
+            document.getElementById("svg-4").style.fill = "#fff";
+            document.getElementById("svg-5").style.fill = "#fff";
+            document.getElementById("AM").style.color = "#fff";
+
+            document.getElementById("svg-6").style.fill = "#fff";
+            document.getElementById("svg-7").style.fill = "#fff";
+            document.getElementById("svg-8").style.fill = "#fff";
+            document.getElementById("svg-9").style.fill = "#fff";
+
+
             document.body.style.backgroundColor = "#383838";
             document.getElementById("ch").style.color = "#FFFFFF";
             document.getElementById("custom").style.color = "#EEEEEE";
@@ -44,10 +59,24 @@
         function day() {
             document.getElementById("semicircle-1").style.display = "flex";
             document.getElementById("semicircle-2").style.display = "none";
-            document.getElementById("bar-1").style.display = "flex";
-            document.getElementById("bar-2").style.display = "none";
+
             document.getElementById("mobile-box").style.backgroundColor = "#FFFFFF";
-            document.getElementById("foot").style.marginTop = "6px";
+            document.getElementById("foot").style.marginTop = "0px";
+            document.getElementById("GS").style.color = "#000";
+            document.getElementById("svg-1").style.fill = "#000";
+            document.getElementById("svg-2").style.fill = "#000";
+            document.getElementById("svg-3").style.fill = "#000";
+            document.getElementById("svg-4").style.fill = "#000";
+            document.getElementById("svg-5").style.fill = "#000";
+            document.getElementById("AM").style.color = "#000";
+
+            document.getElementById("svg-6").style.fill = "#000";
+            document.getElementById("svg-7").style.fill = "#000";
+            document.getElementById("svg-8").style.fill = "#000";
+            document.getElementById("svg-9").style.fill = "#000";
+
+
+
             document.body.style.backgroundColor = "#FFFFFF";
             document.getElementById("ch").style.color = "black";
             document.getElementById("custom").style.color = "#414141";
@@ -82,12 +111,80 @@
         <div class="row">
             <div class="col-md-6 col-12 d-flex justify-content-center">
                 <div class="box" id="mobile-box" style="top: 64px; bottom: 64px;">
-                    <div class="status-bar-1  justify-content-center" id="bar-1" style="margin-top: 17px;">
-                        <img src="./images/status-bar.png">
+
+                    <div class="header " id="header-svg">
+                        <div style="display: flex; align-items: center; margin-left: 37px;">
+                            <svg width="34" height="6" viewBox="0 0 34 6" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path id="svg-1" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M28 2.75C28 4.26878 29.2312 5.5 30.75 5.5C32.2688 5.5 33.5 4.26878 33.5 2.75C33.5 1.23122 32.2688 0 30.75 0C29.2312 0 28 1.23122 28 2.75ZM33 2.75C33 3.99264 31.9926 5 30.75 5C29.5074 5 28.5 3.99264 28.5 2.75C28.5 1.50736 29.5074 0.5 30.75 0.5C31.9926 0.5 33 1.50736 33 2.75Z"
+                                    fill="black" />
+                                <path id="svg-2" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M21 2.75C21 4.26878 22.2312 5.5 23.75 5.5C25.2688 5.5 26.5 4.26878 26.5 2.75C26.5 1.23122 25.2688 0 23.75 0C22.2312 0 21 1.23122 21 2.75ZM26 2.75C26 3.99264 24.9926 5 23.75 5C22.5074 5 21.5 3.99264 21.5 2.75C21.5 1.50736 22.5074 0.5 23.75 0.5C24.9926 0.5 26 1.50736 26 2.75Z"
+                                    fill="black" />
+                                <path id="svg-3" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M16.75 5.5C18.2688 5.5 19.5 4.26878 19.5 2.75C19.5 1.23122 18.2688 0 16.75 0C15.2312 0 14 1.23122 14 2.75C14 4.26878 15.2312 5.5 16.75 5.5Z"
+                                    fill="black" />
+                                <path id="svg-4" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M9.75 5.5C11.2688 5.5 12.5 4.26878 12.5 2.75C12.5 1.23122 11.2688 0 9.75 0C8.23122 0 7 1.23122 7 2.75C7 4.26878 8.23122 5.5 9.75 5.5Z"
+                                    fill="black" />
+                                <path id="svg-5" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M2.75 5.5C4.26878 5.5 5.5 4.26878 5.5 2.75C5.5 1.23122 4.26878 0 2.75 0C1.23122 0 0 1.23122 0 2.75C0 4.26878 1.23122 5.5 2.75 5.5Z"
+                                    fill="black" />
+                            </svg>
+                            <div class="GS-div pt-3">
+                                <p class="p-GS" id="GS">GS</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h2 class="p-AM" id="AM"> <b>9:41 AM</b></h2>
+                        </div>
+
+                        <div class="rightpart">
+
+                            <svg width="8" height="13" viewBox="0 0 8 13" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path id="svg-6" opacity="0.4" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.68955 10.8516V7.29908L6.50277 9.16056L4.68955 10.8516ZM6.58601 3.84041L4.68955 5.63882V2.23165L6.58601 3.84041ZM5.1451 6.50048L7.95913 3.84041L3.76051 0H3.66133V5.34133L0.811414 2.52481L0 3.32389L3.42907 6.50048L0 9.67659L0.811414 10.4757L3.66133 7.65915V13H3.84275L8 9.14997L5.1451 6.50048Z"
+                                    fill="black" />
+                            </svg>
+
+                            <svg width="12" height="9" viewBox="0 0 12 9" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path id="svg-7" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M5.99575 1.52088C7.93552 1.52088 9.70336 2.23545 11.0589 
+                                                3.40718L12 2.36811C10.3946 0.974466 8.29789 0 5.99575 0C3.69711 0 1.6034 0.971507 0 2.36071L0.939148 3.40126C2.29364 
+                                                2.23299 4.05848 1.52088 5.99575 1.52088ZM5.99575 4.52022C7.15832 4.52022 8.22042 4.94236 9.03961 5.6377L10.0352 
+                                                4.53797C8.95164 3.60789 7.54217 3.00033 5.99575 3.00033C4.45233 3.00033 3.04386 3.60641 1.96126 4.53353L2.95539 
+                                                5.63474C3.77408 4.94088 4.83469 4.52022 5.99575 4.52022ZM8.04348 6.73742C7.48919 6.27732 6.77546 5.95874 5.99525 
+                                                5.95874C5.21654 5.95874 4.50381 6.27682 3.94952 6.73496L5.99525 9L8.04348 6.73742Z" fill="black" />
+                            </svg>
+
+                            <svg width="25" height="10" viewBox="0 0 25 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path id="svg-8" fill-rule="evenodd" clip-rule="evenodd" d="M20.9975 0.5H1.50246C0.672674 0.5 0 1.16802 0 2.00006V8.49994C0 
+                                                9.3284 0.67338 10 1.50246 10H20.9975C21.8273 10 22.5 9.33198 22.5 8.49994V2.00006C22.5 1.1716 21.8266 0.5 20.9975 
+                                                0.5ZM0.5 2.00006C0.5 1.44576 0.947213 1 1.50246 1H20.9975C21.5509 1 22 1.4482 22 2.00006V8.49994C22 9.05424 21.5528 
+                                                9.5 20.9975 9.5H1.50246C0.949064 9.5 0.5 9.0518 0.5 8.49994V2.00006Z"
+                                    fill="black" />
+                                <path id="svg-9" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M1.5 1.5C1.22386 1.5 1 1.72386 1 2V8.5C1 8.77614 1.22386 9 1.5 9H10V1.5H1.5Z"
+                                    fill="black" />
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M24.5 5.25C24.5 6.14064 23.8481 6.87745 23 7V3.5C23.8481 3.62255 24.5 4.35936 24.5 5.25Z"
+                                    fill="black" />
+                            </svg>
+
+                        </div>
+
                     </div>
-                    <div class="status-bar-2  justify-content-center" id="bar-2" style="margin-top: 17px;">
-                        <img src="./images/header-white.png">
-                    </div>
+
+
+
+
+
+
+
                     <div class="circle1-div justify-content-center" id="circle-1" style="margin-top: 68px;">
                         <div class="circle-1-div">
                         </div>
